# just-keep-identity

./: .geminiignore  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  Makefile  README.md  README.zh-TW.md  install.sh  pyproject.toml
.gemini/: settings.json
crates/jki/: Cargo.toml
crates/jki-agent/: Cargo.toml  Info.plist  build.rs  jki.entitlements
crates/jki-agent/src/: biometric.rs  main.rs  tray.rs
crates/jki-core/: Cargo.toml
crates/jki-core/examples/: keyring_proto.rs
crates/jki-core/src/: import.rs  keychain.rs  lib.rs  paths.rs
crates/jki/src/: main.rs
crates/jkim/: Cargo.toml
crates/jkim/assets/: guide_completions.md  guide_man.md  guide_status.md
crates/jkim/src/: assets.rs  lib.rs  main.rs
docs/: hn-launch-draft.md  homebrew-distribution-guide.md  homebrew-jki.rb  homebrew-test-guide.md  jki-cli-spec.md  jki-positioning-and-competitors.md  jki-prd-spec.md  macos-distribution-guide.md  macos-verification-guide.md
draft/: verify_sync_conflict.py
missions/: mission-app-store-onboarding-excellence.md  mission-biometric-auth-report.md  mission-biometric-auth.md  mission-cli-intelligence-and-cleanup.md  mission-distribution-and-cicd.md  mission-install-script.md  mission-jki-agent-hardening.md  mission-jki-agent-startup-check.md  mission-jki-fail-fast-ux.md  mission-jki-show-secret.md  mission-jkim-add-subcommand.md  mission-jkim-import-hardening.md  mission-keychain-proto.md  mission-knowledge-management-infrastructure.md  mission-launch-and-community-outreach.md  mission-macos-packaging-and-signing.md  mission-macos-packaging-report.md  mission-phase-3.md  mission-phase-4.md  mission-sync-ux.md  mission-unit-test-report.md  mission-unit-test.md  mission-vault-data-integrity.md  mission-web-presence-automation.md  readme_improve.md
missions/archive/: 2026-03-14-coordinate-anchored-edit-report.md  Rust CLI 知識管理基礎架構調研.md  mission-agent-tray-icon-report.md  mission-agent-tray-icon.md  mission-cleanup-rkyv-report.md  mission-cleanup-rkyv.md  mission-export-logic-report.md  mission-export-logic.md  mission-handover-phase-5-start.md  mission-handover-sophization.md  mission-install-script-report.md  mission-jki-agent-hardening-report.md  mission-jki-agent-startup-check-report.md  mission-jki-fail-fast-ux-report.md  mission-jki-force-agent-report.md  mission-jki-force-agent.md  mission-jki-show-secret-report.md  mission-jki-show-secret.md  mission-jki-smart-index-report.md  mission-jki-smart-index.md  mission-jki-uri-output.md  mission-jkim-add-enhancement.md  mission-jkim-add-live-handshake-report.md  mission-jkim-add-live-handshake.md  mission-jkim-add-subcommand-report.md  mission-jkim-add-subcommand.md  mission-jkim-agent-control-report.md  mission-jkim-agent-control.md  mission-jkim-completions-handover.md  mission-jkim-completions.md  mission-jkim-import-hardening-report.md  mission-keychain-integration-report.md  mission-keychain-integration.md  mission-keychain-proto-report.md  mission-phase-3.md  mission-phase-5-report.md  mission-phase-5.md  mission-sync-ux-report.md  mission-unit-test-report.md  mission-unit-test.md  (+4 more)
scripts/: e2e-test.sh  import_winauth.py  inspect-string.sh  jki_mvp.py  mock_totp_gen.py  notarize_macos.sh  security-audit.sh  sign_macos.sh
website/: index.html  robots.txt  sitemap.xml
