[workspace]
members = [
    "crates/jki",
    "crates/jkim",
    "crates/jki-core",
    "crates/jki-agent",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Just Keep Identity Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/just-keep-identity"
homepage = "https://github.com/your-username/just-keep-identity"
description = "JK Suite 極速 MFA 數位金庫 - Just Keep Identity (jki)"
