[workspace]
members = [
    "crates/jki",
    "crates/jkim",
    "crates/jki-core",
    "crates/jki-agent",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Li-chih Wu <lichihwu@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lichih/just-keep-identity"
homepage = "https://github.com/lichih/just-keep-identity"
description = "JK Suite: High-speed MFA & Identity Session Manager for CLI Power Users"
