[package]
name = "jki-agent"
version.workspace = true
edition.workspace = true

[dependencies]
jki-core = { path = "../jki-core" }
interprocess = "1.2.1"
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
secrecy = "0.8"
tray-icon = "0.19"
tao = "0.30"
muda = "0.15"
image = "0.25"
objc = "0.2"
block = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
