[package]
name = "jki-agent"
version.workspace = true
edition.workspace = true

[dependencies]
jki-core = { path = "../jki-core", features = ["keychain"] }
interprocess = "1.2.1"
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
secrecy = "0.8"
notify-rust = "4"
tray-icon = { version = "0.19", optional = true }
tao = { version = "0.30", optional = true }
muda = { version = "0.15", optional = true }
image = { version = "0.25", optional = true }

[features]
default = ["tray"]
tray = ["dep:tray-icon", "dep:tao", "dep:muda", "dep:image"]

[dev-dependencies]
tempfile = "3"
serial_test = "3"
