[package]
name = "jki-core"
version.workspace = true
edition.workspace = true

[dependencies]
totp-rs = "5"
rkyv = { version = "0.7", features = ["validation"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
age = "0.10"
url = "2"
urlencoding = "2"
base32 = "0.4"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
zeroize = { version = "1.7", features = ["derive"] }
secrecy = { version = "0.8", features = ["serde"] }
rpassword = "7.3"
atty = "0.2.14"
crossterm = "0.29.0"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
