[package]
name = "jki-core"
version.workspace = true
edition.workspace = true

[dependencies]
totp-rs = "5"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
age = "0.10"
url = "2"
urlencoding = "2"
base32 = "0.4"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
zeroize = { version = "1.7", features = ["derive"] }
secrecy = { version = "0.8", features = ["serde"] }
rpassword = "7.3"
atty = "0.2.14"
crossterm = "0.29.0"
keyring = { version = "3.0", features = ["apple-native", "windows-native"], optional = true }
interprocess = "1.2.1"
clap = { version = "4.4", features = ["derive"] }

[features]
default = []
keychain = ["dep:keyring"]

[dev-dependencies]
tempfile = "3"
serial_test = "3"
