[package]
name = "jki"
version.workspace = true
edition.workspace = true

[dependencies]
jki-core = { path = "../jki-core" }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
copypasta = "0.10"
notify-rust = "4"
totp-rs = "5"
secrecy = "0.8"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
