[package]
name = "jki"
version.workspace = true
edition.workspace = true

[dependencies]
jki-core = { path = "../jki-core", default-features = false }
interprocess = "1.2.1"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
secrecy = "0.8"
copypasta = "0.10"
notify-rust = "4"
totp-rs = "5"
[dev-dependencies]
tempfile = "3"
serial_test = "3"
