[package]
name = "jkim"
version.workspace = true
edition.workspace = true

[dependencies]
jki-core = { path = "../jki-core", features = ["keychain"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22.1"
chrono = "0.4"
tempfile = "3"
secrecy = "0.8"
anyhow = "1.0"
zip = { version = "2.1", features = ["aes-crypto"] }
clap_complete = "4.4"

[dev-dependencies]
serial_test = "3"
