[package]
name = "jkim"
version.workspace = true
edition.workspace = true

[dependencies]
jki-core = { path = "../jki-core", features = ["keychain"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2"
uuid = { version = "1.0", features = ["v4"] }
atty = "0.2"
base32 = "0.4.0"
base64 = "0.22.1"
chrono = "0.4"
tempfile = "3"
secrecy = "0.8"
anyhow = "1.0"
console = "0.15"
zip = { version = "2.1", features = ["aes-crypto"] }
clap_complete = "4.4"
crossterm = "0.27"
copypasta = "0.10"
termimad = "0.31"

[dev-dependencies]
serial_test = "3"
